<resources>
    <string name="app_name">App Lock</string>
    <string name="applock_native_language_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="applock_native_home_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="find_app_permission">Find %s and turn On</string>
    <string name="content_pattern">Make 1 pattern by matching at least 4 points</string>
    <string name="create">CREATE</string>
    <string name="enter_pattern">Enter Pattern</string>
    <string name="wrong_pattern">Pattern incorrect !</string>
    <string name="ok">OKAY</string>
    <string name="pattern" translatable="false">PATTERN</string>
    <string name="pattern_view">Pattern</string>
    <string name="knock_code">KNOCK CODE</string>
    <string name="DESCRIBE_ACCESS_NOTIFICATION_POLICY">"Smart lock need permission to hide your notification"</string>
    <string name="grant_permission">Grant permission</string>
    <string name="cant_hide_video">Can not hide this video !</string>
    <string name="content_grant_permission">The following permissions are required to run the application</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pin">PIN</string>
    <string name="content_create_pin">Make 1 pin with 4 to 8 digits</string>
    <string name="enter_knock">Enter knock code</string>
    <string name="content_app">Help clean and speed up your device</string>
    <string name="privacy_policy">Continue means you agree with</string>
    <string name="start_use">Start</string>
    <string name="lock">Lock</string>
    <string name="app_lock">App Lock</string>
    <string name="advanced">Advanced</string>
    <string name="normal">Normal</string>
    <string name="notification_lock">"Privacy Notice"</string>
    <string name="description_lock_noti">"Protect notifications about locked apps "</string>
    <string name="allow">Allow</string>
    <string name="content_lock_notification">Protect your private app notifications</string>
    <string name="detail">Detail</string>
    <string name="action_detail">ACTION_DETAIL</string>
    <string name="action_center">Action center</string>
    <string name="clear_all">Clear All</string>
    <string name="no_new_notifications">No new notification</string>
    <string name="ACTION_NOTIFICATION">ACTION_NOTIFICATION</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="smart_applock">APPLOCK</string>
    <string name="make_pass_again">"Enter password again "</string>
    <string name="click_create_passwork">"Click button create  below "</string>
    <string name="set_password">Set Password</string>
    <string name="pin_incorrect">Enter PIN incorrect ! </string>
    <string name="code_incorrect">Enter CODE incorrect ! </string>
    <string name="content_create_code">Generate codes with 4 to 8 taps</string>
    <string name="theme">Themes</string>
    <string name="warning">Intrusion alert</string>
    <string name="vault">Vault</string>
    <string name="setting">Setting</string>
    <string name="turn_on">TURN ON</string>
    <string name="memory_capacity">Memory capacity</string>
    <string name="speed_up">SPEED UP</string>
    <string name="storage_capacity">Storage capacity</string>
    <string name="recovery">Recovery</string>
    <string name="content_photo">Check out the same photos to free up more space for your phone</string>
    <string name="check_restore">Restore deleted photo ,video and audio in your phone</string>
    <string name="check_now">CHECK NOW</string>
    <string name="delete_same_photo">Delete the same photo</string>
    <string name="apps">App Lock</string>
    <string name="locked">Locked</string>
    <string name="protection_lock">Uninstall protection</string>
    <string name="description_protection_lock">Prevent hackers from uninstalling apps</string>
    <string name="intrusion_alert">Intrusion Alert</string>
    <string name="take_a_photo">Take a photo when you enter the wrong password many times:</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="content_take_photo">This person wants to see your applock</string>
    <string name="LOCK">LOCK</string>
    <string name="ACTION_TAKE_PHOTO">ACTION_TAKE_PHOTO</string>
    <string name="ACTION_STOP_TAKE_PHOTO">ACTION_STOP_TAKE_PHOTO</string>
    <string name="search_app">Search</string>
    <string name="subtraction">-</string>
    <string name="lock_new_app">Lock New Apps</string>
    <string name="content_lock_new_app">After installing the new app you can press to lock the app</string>
    <string name="change_passwrod">Change Password</string>
    <string name="change_question">Change security questions</string>
    <string name="rate">Rate Us</string>
    <string name="content_create_question">Set a "Secret Answer" to be used when you forget the password.</string>
    <string name="secret_answer_question">Secret Answer Question</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="name_of_your_high_school">Name of your high school</string>
    <string name="recovery_code">Enter the recovery code</string>
    <string name="type_the_answer_here">Type the answer here</string>
    <string name="save">Save</string>
    <string name="name_of_your_high_school_teacher">Name of your high school teacher</string>
    <string name="name_of_your_first_pet">Name of your first pet</string>
    <string name="your_birthday">Your birthday</string>
    <string name="your_lucky_number">Your lucky number</string>
    <string name="your_idol_name">Your idol name</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart</string>
    <string name="answer_incorrect">"Answer incorrect "</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="album">Album</string>
    <string name="select_all">Select All</string>
    <string name="hide">Hide</string>
    <string name="IMAGES">IMAGES</string>
    <string name="VIDEOS">VIDEOS</string>
    <string name="file_not_found">File not found</string>
    <string name="cannot_read_file">Can\'t read file</string>
    <string name="file_not_read_msg">File not read</string>
    <string name="file_exist">File exist !</string>
    <string name="file_hidden">File hidden !</string>
    <string name="do_you_want_to_delete_the_photo">Do you want to delete the photo?</string>
    <string name="do_you_want_to_delete_all_the_photo">Do you want to delete all the photo?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hiding">Please wait...</string>
    <string name="delete_after_hiding">Do you want to delete photos after hiding ?</string>
    <string name="delete_video_after_hiding">Do you want to delete videos after hiding ?</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="path">Path</string>
    <string name="recover_dialog_title_image">Want to recover this image back to Gallery?</string>
    <string name="recover_dialog_title_video">Want to recover this video back to Gallery?</string>
    <string name="permission_denied_to_recover_msg_img">Permission denied to recover image.</string>
    <string name="permission_denied_to_recover_msg_video">Permission denied to recover video.</string>
    <string name="image_recovered_msg">Image recovered</string>
    <string name="image_not_recovered_msg">Image not recoverd</string>
    <string name="video_recovered_msg">Video recovered</string>
    <string name="video_not_recovered_msg">Video not recoverd</string>
    <string name="title_activity_album_video">AlbumVideoActivity</string>
    <string name="album_image">Album Image</string>
    <string name="album_video">Album Video</string>
    <string name="delete_video">Do you want delete video ?</string>
    <string name="same_image">Same Image</string>
    <string name="delete">Delete</string>
    <string name="no_same_photos">No same photos</string>
    <string name="restore_folder_path">ezstudiorestoreimage</string>
    <string name="restore_image">Restore Image</string>
    <string name="no_image">No images</string>
    <string name="restore">Restore</string>
    <string name="deselected">Do you want to deselect?</string>
    <string name="do_want_restore_photos">Do you want to recover photos?</string>
    <string name="do_want_restore_videos">Do you want to recover videos?</string>
    <string name="do_want_restore_audios">Do you want to recover audios?</string>
    <string name="Audios">AUDIOS</string>
    <string name="no_videos">No videos</string>
    <string name="no_audios">No audios</string>
    <string name="LOCK_THEME">Lock Theme</string>
    <string name="LOCK_SCREEN">Lock Screen</string>
    <string name="premium_upgrade">PREMIUM UPGRADE</string>
    <string name="protected_apps">apps are being protected</string>
    <string name="incorrect_answer">Incorrect answer</string>
    <string name="see_more">See more…</string>
    <string name="collapse_">Collapse ^</string>
    <string name="is_protecting">Is Protecting Your Privacy</string>
    <string name="Notification">Notification</string>
    <string name="clean">Clean</string>
    <string name="cleaning_up">Cleaning up …</string>
    <string name="freed_up_memory">"Freed up memory : "</string>
    <string name="overlay">Overlay</string>
    <string name="usage_access">Usage Access</string>
    <string name="got_it">Got it</string>
    <string name="apply">Apply</string>
    <string name="LOCK_BACKGROUND">BACKGROUND</string>
    <string name="policys">Policy</string>
    <string name="protected_by">PROTECTED BY</string>
    <string name="later">LATER</string>
    <string name="protect">PROTECT</string>
    <string name="content_dialog_new_app">Is installed. Do you want to protect it now?</string>
    <string name="find_and_allow_permission">Find and allow permission</string>
    <string name="storage">Storage</string>
    <string name="thank_for_rate">"Thank you for rate "</string>
    <string name="enjoying_app">Enjoying app?</string>
    <string name="how_feel">How do you feel about this app?</string>
    <string name="you_can_click_the_new_icon_to_open_the_app_later">You can click the new icon to open the app later</string>
    <string name="your_changes_will_take_effect_after_clicking_restart">Your changes will take effect after clicking “Restart”</string>
    <string name="write_your_feedback">Write your feedback…</string>
    <string name="submit">Submit</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="txt_goto_set">Go to Settings</string>
    <string name="find_app_lock_and_turn_it_on">Find App Lock and Turn it on</string>
    <string name="do_you_like_app_lock">Do you like App Lock?</string>
    <string name="we_really_appreciate_you_taking_the_time_to_rate_us">We really appreciate you taking the \ntime to rate us.</string>
    <string name="the_best_for_us">The best for us</string>
    <string name="all_files_access_permission_required">All Files Access permission required</string>
    <string name="txt_content_read_media_pms">To ensure the normal use of this app, please grant App Lock All Files Access permission to </string>
</resources>