<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    tools:context=".activity.Trans">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp"
        android:background="@drawable/radius_top_12"
        android:backgroundTint="#383856"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/find_app_lock_and_turn_it_on"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/bg_radius_14"
            app:layout_constraintTop_toBottomOf="@id/tv_title">
            <ImageView
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:src="@drawable/ic_default"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_12sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#404040"
                android:layout_marginStart="@dimen/_12sdp"
                android:textSize="@dimen/_18sdp"
                android:fontFamily="@font/nunito_bold"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/btnSwitchDisplayOverApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:clickable="false"
                android:focusable="false"
                android:textOff=""
                android:textOn=""
                android:checked="true"
                android:thumb="@drawable/thumb_lock_new_app"
                app:track="@drawable/track_selector"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnGotoSet"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_action_dialog"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_main">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/got_it"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>