<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#CC000000"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/bg_dialog_permission"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/circle"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/bg_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivIconApp"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/img_read_media_pms"
            app:layout_constraintBottom_toBottomOf="@+id/circle"
            app:layout_constraintEnd_toEndOf="@+id/circle"
            app:layout_constraintStart_toStartOf="@+id/circle"
            app:layout_constraintTop_toTopOf="@+id/circle" />

        <TextView
            android:id="@+id/tvUnLockQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/all_files_access_permission_required"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivIconApp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/txt_content_read_media_pms"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvUnLockQuestion" />

        <LinearLayout
            android:id="@+id/btnGotoSet"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_action_dialog"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/txt_goto_set"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>